[Sensors] Fix SensorErrorEvent constructor

This patch fixes SensorErrorEvent constructor so that it considers
the given initializer.

The test is being added at:
https://chromium-review.googlesource.com/c/chromium/src/+/720407

Also nullable specifier is removed from SensorOptions.frequency
field as it follows from the updated ED specification:
https://w3c.github.io/sensors/#the-sensor-interface

Bug: 775001
Change-Id: Ib20994ed89981e948ec739fc13033653278c92e7
Reviewed-on: https://chromium-review.googlesource.com/719819
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Raphael Kubo da Costa (rakuco) <raphael.kubo.da.costa@intel.com>
Reviewed-by: Alexander Shalamov <alexander.shalamov@intel.com>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com>
Cr-Commit-Position: refs/heads/master@{#509140}
Former-commit-id: ec3d9ebab41efcfdcea80a45d639848daf1b2161