third_party/WebKit/Source/modules/sensor/SensorErrorEvent.cpp
@@ -21,7 +21,9 @@ SensorErrorEvent::SensorErrorEvent(const AtomicString& event_type,
 
 SensorErrorEvent::SensorErrorEvent(const AtomicString& event_type,
                                    const SensorErrorEventInit& initializer)
-    : Event(event_type, initializer) {}
+    : Event(event_type, initializer), error_(initializer.error()) {
+  DCHECK(error_);
+}
 
 const AtomicString& SensorErrorEvent::InterfaceName() const {
   return EventNames::SensorErrorEvent;
